chore: Update server.js, authController.js, and mqttClient.js

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@influxdata/influxdb-client": "^1.33.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "influx": "^5.9.3",
     "jsonwebtoken": "^9.0.2",
     "mqtt": "^5.7.3",
     "pg": "^8.12.0",
