--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "influx": "^5.9.3",
     "jsonwebtoken": "^9.0.2",
     "mqtt": "^5.7.3",
+    "mysql2": "^3.11.0",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3"
